@@ -17,12 +17,17 @@ if (!isset($_SESSION['uploader_runtimes'])) {
 $_SESSION['uploader_type'] = isset($_GET['uploader_type']) && isset($_SESSION['uploader_folder'][$_GET['uploader_type']])
 	? $_GET['uploader_type'] : 'images';
 $subdir = !isset($_GET['uploader_subdir']) ? ''
-	: preg_replace('/\.\.[\/\\\\]?/', '', get_magic_quotes_gpc() ? stripslashes($_GET['uploader_subdir']) : $_GET['uploader_subdir']);
+	: preg_replace('/\.\.[\/\\]?/', '', get_magic_quotes_gpc() ? stripslashes($_GET['uploader_subdir']) : $_GET['uploader_subdir']);
 $_SESSION['uploader_subdir'] = is_dir($_SESSION['uploader_folder'][$_SESSION['uploader_type']].$subdir)
 	? $subdir : '';
 define('RESIZE',
-	isset($_GET['uploader_resize']) && in_array($_GET['uploader_resize'], array('small', 'medium', 'large'))
+	isset($_GET['uploader_resize']) && in_array($_GET['uploader_resize'], array('small', 'medium', 'large', 'custom'))
 	? $_GET['uploader_resize'] : '');
+foreach (array('width', 'height', 'quality') as $name) {
+    if (RESIZE == 'custom' && !empty($_GET['uploader_'.$name]) && ctype_digit($_GET['uploader_'.$name])) {
+        define(strtoupper($name), $_GET['uploader_'.$name]);
+    }
+}
 
 ?>
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
@@ -32,7 +37,7 @@ define('RESIZE',
     <title>title</title>
     <link rel="stylesheet" type="text/css" href="lib/jquery.plupload.queue/css/jquery.plupload.queue.css">
     <script type="text/javascript" src="lib/jquery-1.7.2.min.js"></script>
-    <script type="text/javascript" src="http://bp.yahooapis.com/2.4.21/browserplus-min.js"></script> <!-- TODO: integrate -->
+    <script type="text/javascript" src="http://bp.yahooapis.com/2.4.21/browserplus-min.js"></script>
     <script type="text/javascript" src="lib/plupload.full.js"></script>
 <?php if (file_exists('lib/i18n/'.$_SESSION['uploader_lang'].'.js')) {?>
     <script type="text/javascript" src="lib/i18n/<?php echo $_SESSION['uploader_lang']?>.js"></script>
@@ -46,7 +51,13 @@ define('RESIZE',
 	    url : 'lib/upload.php',
 	    max_file_size : '<?php echo $_SESSION['uploader_max_size']?>',
 	    <?php echo $_SESSION['uploader_chunking']?>
-<?php if (RESIZE != '') {?>
+<?php if (defined('WIDTH') && defined('HEIGHT') && defined('QUALITY')) {?>
+	    resize : {
+		width : <?php echo WIDTH?>,
+		height: <?php echo HEIGHT?>,
+		quality: <?php echo QUALITY, "\n"?>
+	    },
+<?php } elseif (RESIZE != '') {?>
 	    resize : {
 		width : <?php echo $_SESSION['uploader_resize'][RESIZE]['width']?>,
 		height : <?php echo $_SESSION['uploader_resize'][RESIZE]['height']?>,
