@@ -3,7 +3,6 @@ TODO
     translation-hints
     uploader localization from back-end???
 
-    document usage of uploader() (params are not safe!)
     license
 
 Version 1alpha6 - released TODO
@@ -11,6 +10,8 @@ cmb	updated to Plupload 1.5.4
 cmb	added danish translation (contributed by maeg)
 cmb	added including of config and language file from init.php
 cmb	adjusted system check to current requirements
+cmb	added custom resize parameters for use by other plugins
+cmb	updated manual
 
 Version 1alpha5 - intenally released 2012-04-10
 cmb	updated to Plupload 1.5.3
